src/kind/nginx-ingress-routes.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: name-builder
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/name-builder"
        backend:
          service:
            name: namebuilder
            port:
              number: 80
---
